--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -37,3 +37,11 @@
     year={2018},
     pages={2459-2463}
 }
+@book{Bosi2002IntroductionDA,
+    author = {Bosi, Marina and Goldberg, Richard E.},
+    title = {Introduction to Digital Audio Coding and Standards},
+    year = {2002},
+    isbn = {1402073577},
+    publisher = {Kluwer Academic Publishers},
+    address = {Norwell, MA, USA},
+} 
